# cc-two

./: .gitignore  .gitmodules  README.md
ATMProj/: .gitignore
ATMProj/ATMProj/: ATMProjApp.swift  ATMViewModel.swift  ContentView.swift
ATMProj/ATMProj.xcodeproj/: project.pbxproj
ATMProj/ATMProj.xcodeproj/project.xcworkspace/xcuserdata/philip.xcuserdatad/: UserInterfaceState.xcuserstate
ATMProj/ATMProj.xcodeproj/xcuserdata/philip.xcuserdatad/xcschemes/: xcschememanagement.plist
Aberr/: AberrApp.swift  ContentView.swift
Aberr.xcodeproj/: project.pbxproj
AberrProj/AberrProj/: AberrProjApp.swift  AberrViewModel.swift  ContentView.swift
AberrProj/AberrProj.xcodeproj/: project.pbxproj
AberrProj/AberrProj.xcodeproj/xcshareddata/xcschemes/: AberrProj.xcscheme
AberrProj/AberrProj/Resources/AppIcon.icon/: icon.json
AberrProj/AberrProj/Services/: ErrorHandlingService.swift  PhotoLibraryService.swift
AberrProj/AberrProj/ViewModels/: AberViewModel.swift
AberrProj/AberrProj/Views/Components/: CircularProgressView.swift  ErrorToastView.swift
AberrProj/AberrProj/Views/Edit/: EditView.swift
AberrProj/AberrProj/Views/Edit/Components/: EditControlsView.swift
AberrProj/AberrProj/Views/Gallery/: RawPhotoGridView.swift
AberrProj/AberrProj/Views/Gallery/Components/: PhotoGridItemView.swift
AberrProj/AberrProj/Views/Home/: ContentView.swift
AberrProj/AberrProj/Views/Settings/: SettingsView.swift  SettingsViewAbout.swift
cpp/: .gitignore  Aberr-Bridging-Header.h  CMakeLists.txt  Makefile  Math.cpp  Math.hpp  Package.swift
cpp/Sources/ATMCLI/: main.swift
cpp/Sources/ATMPackage/: ATMWrapper.swift
cpp/Sources/ATMWithdrawCpp/include/ATMWithdrawCpp/: ATM.h  ATMWithdrawCpp.h
cpp/Sources/ATMWithdrawCpp/src/: ATM.cpp
cpp/Sources/AberrCLI/: main.swift
cpp/Sources/AberrCore/include/: Aberr.h  DevelopmentPipeline.h  IAdjustment.h
cpp/Sources/AberrCore/include/AberrWithdrawCpp/: AberrWithdrawCpp.h
cpp/Sources/AberrCore/include/Adjustments/: ExposureAdjustment.h  WhiteBalanceAdjustment.h
cpp/Sources/AberrCore/src/: Aberr.cpp  DevelopmentPipeline.cpp
cpp/Sources/AberrCore/src/Adjustments/: ExposureAdjustment.cpp  WhiteBalanceAdjustment.cpp
cpp/Sources/AberrPackage/: ATMWrapper.swift  AberrCoreWrapper.swift
cpp/Sources/AberrWithdrawCpp/include/AberrWithdrawCpp/: Aberr.h
